--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Ashirwad Sangwan</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,17 +40,17 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Ashirwad
+                        <span class="text-primary">Sangwan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Chennai, India 
+                        <a href="mailto:name@email.com">ashirwadsangwan@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I have 3 years of work experience in the CPG and Hospitality domain where I have solved complex business problems and built data science accelerators that were used by multiple clients from Fortune 500 companies. I have worked on problems like Revenue Optimization, Price Optimization, Customer Propensity Models, Churn Prediction, Customer Next Stay Prediction and have created chatbots and QnA Search Engines using SOTA NLP models.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/ashirwadsangwan/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/ashirwadsangwan/"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -63,9 +63,13 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Data Scientist</h3>
+                            <div class="subheading mb-3">Latentview Analytics</div>
+                            <p>◦ Propensity Model: Built and deployed a classification model for a client where the client wanted to know which segment of customers would opt for credit cards provided by one of the partner banks. Created and deployed the model in AWS Sagemaker.
+◦ OTA to Direct Booking: Leading a team to solve a problem of converting customers who book their hotel stays through OTA platforms to booking platforms provided by our client.
+◦ Next Stay Prediction: Created and deployed next stay prediction model for a hospitality client to find the right segment of the people to target for marketing. Used Mean Absolute Error as the model metric for optimization.
+◦ Chatbot using QnA BERT: Created a chat bot for one of the top Hospitality business in the world that is being used by millions of customers around the globe. Used BERT question-answering pre-trained model and tweaked it for our use-case to make the chat bot experience realistic for the customers.
+◦ Automation using NLG: Leading a team in developing a logic which will read data from an excel file and gives an output in the form of smart insights to make business decisions. Using transformers, we generate language from a processed input which comes from the raw excel files.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
