--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                             <h3 class="mb-0">Data Scientist</h3>
                             <div class="subheading mb-3">Latentview Analytics</div>
                             <ul>
-                            <li><h5>Propensity Model</h5>: Built and deployed a classification model for a client where the client wanted to know which segment of customers would opt for credit cards provided by one of the partner banks. Created and deployed the model in AWS Sagemaker.</li>
-                            <li>OTA to Direct Booking: Leading a team to solve a problem of converting customers who book their hotel stays through OTA platforms to booking platforms provided by our client.</li>
-                            <li>Next Stay Prediction: Created and deployed next stay prediction model for a hospitality client to find the right segment of the people to target for marketing. Used Mean Absolute Error as the model metric for optimization.</li>
-                            <li>Chatbot using QnA BERT: Created a chat bot for one of the top Hospitality business in the world that is being used by millions of customers around the globe. Used BERT question-answering pre-trained model and tweaked it for our use-case to make the chat bot experience realistic for the customers.</li>
-                            <li>Automation using NLG: Leading a team in developing a logic which will read data from an excel file and gives an output in the form of smart insights to make business decisions. Using transformers, we generate language from a processed input which comes from the raw excel files.</li>
+                            <li><strong>Propensity Model:</strong> Built and deployed a classification model for a client where the client wanted to know which segment of customers would opt for credit cards provided by one of the partner banks. Created and deployed the model in AWS Sagemaker.</li>
+                            <li><strong>OTA to Direct Booking:</strong> Leading a team to solve a problem of converting customers who book their hotel stays through OTA platforms to booking platforms provided by our client.</li>
+                            <li><strong>Next Stay Prediction:</strong> Created and deployed next stay prediction model for a hospitality client to find the right segment of the people to target for marketing. Used Mean Absolute Error as the model metric for optimization.</li>
+                            <li><strong>Chatbot using QnA BERT:</strong> Created a chat bot for one of the top Hospitality business in the world that is being used by millions of customers around the globe. Used BERT question-answering pre-trained model and tweaked it for our use-case to make the chat bot experience realistic for the customers.</li>
+                            <li><strong>Automation using NLG:</strong> Leading a team in developing a logic which will read data from an excel file and gives an output in the form of smart insights to make business decisions. Using transformers, we generate language from a processed input which comes from the raw excel files.</li>
                         </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
