Experimenting with subheadings

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data Scientist</h3>
-                            <div class="subheading mb-3">Latentview Analytics</div>
+                            <h3 class="mb-0">Latentview Analytics</h3>
+                            <div class="subheading mb-3">Data Scientist</div>
                             <ul>
                             <li><strong>Propensity Model:</strong> Built and deployed a classification model for a client where the client wanted to know which segment of customers would opt for credit cards provided by one of the partner banks. Created and deployed the model in AWS Sagemaker.</li>
                             <li><strong>OTA to Direct Booking:</strong> Leading a team to solve a problem of converting customers who book their hotel stays through OTA platforms to booking platforms provided by our client.</li>
@@ -73,15 +73,29 @@
                             <li><strong>Automation using NLG:</strong> Leading a team in developing a logic which will read data from an excel file and gives an output in the form of smart insights to make business decisions. Using transformers, we generate language from a processed input which comes from the raw excel files.</li>
                         </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Tiger Analytics</h3>
+                            <div class="subheading mb-3">Senior Analyst</div>
+                            <ul>
+                                <li><strong>Price Recommendation:</strong> Developed a price recommendation model for food items using SLSQP algorithm for a fast-food client. Used Price elasticity, item price and units sold to formulate the objective function for Revenue maximization. Planned back-testing to fine-tune the model for better recommendations.</li>
+                                
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jul 2020 - Aug 2021</span></div>
+                    
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Analyst</h3>
+                            <!-- <div class="subheading mb-3">Tiger Analytics</div> -->
+                            <ul>
+                                <li><strong>AutoML:</strong> Created data science accelerators which are being used by the whole company to fasten the process of the model building for a business problem. Documented and Tested the code for our company product which has been in use by multiple clients.</li>
+                                <li><strong>Predicting Store Location:</strong> Built a model to predict the optimal new locations for a Retail client that wanted to find the optimal places to open their stores to maximize the profits.Used linear regression to get revenues at new locations depending on demography and other variables.Then depending on the revenue predictions for each of new locations, optimal locations were suggested.</li>
+                                <li><strong>Outlier Detection and Model Evaluation Tool:</strong> Built an Outlier detection module inside the python library for a Research and Development project to get more insights during exploratory data analysis. Also, created a model evaluation tool which generates insights about the model building processes like evaluation metrics, feature importance and model comparisons etc. for multiple model input.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jul 2019 - Aug 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
