--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Analyst</h3>
-                            <!-- <div class="subheading mb-3">Tiger Analytics</div> -->
+                            <div class="subheading mb-3">Tiger Analytics</div>
                             <ul>
                                 <li><strong>AutoML:</strong> Created data science accelerators which are being used by the whole company to fasten the process of the model building for a business problem. Documented and Tested the code for our company product which has been in use by multiple clients.</li>
                                 <li><strong>Predicting Store Location:</strong> Built a model to predict the optimal new locations for a Retail client that wanted to find the optimal places to open their stores to maximize the profits.Used linear regression to get revenues at new locations depending on demography and other variables.Then depending on the revenue predictions for each of new locations, optimal locations were suggested.</li>
