--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Latentview Analytics</h3>
-                            <div class="subheading mb-3">Data Scientist</div>
+                            <h3 class="mb-0">Data Scientist</h3>
+                            <div class="subheading mb-3">Latentview Analytics</div>
                             <ul>
                             <li><strong>Propensity Model:</strong> Built and deployed a classification model for a client where the client wanted to know which segment of customers would opt for credit cards provided by one of the partner banks. Created and deployed the model in AWS Sagemaker.</li>
                             <li><strong>OTA to Direct Booking:</strong> Leading a team to solve a problem of converting customers who book their hotel stays through OTA platforms to booking platforms provided by our client.</li>
@@ -77,15 +77,16 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Tiger Analytics</h3>
-                            <div class="subheading mb-3">Senior Analyst</div>
+                            <h3 class="mb-0">Senior Analyst</h3>
+                            <div class="subheading mb-3">Tiger Analytics</div>
                             <ul>
                                 <li><strong>Price Recommendation:</strong> Developed a price recommendation model for food items using SLSQP algorithm for a fast-food client. Used Price elasticity, item price and units sold to formulate the objective function for Revenue maximization. Planned back-testing to fine-tune the model for better recommendations.</li>
                                 
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jul 2020 - Aug 2021</span></div>
-                    
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Analyst</h3>
                             <div class="subheading mb-3">Tiger Analytics</div>
