Education Section Updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Chennai, India .
                         <a href="mailto:name@email.com">ashirwadsangwan@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I have 3 years of work experience in the CPG and Hospitality domain where I have solved complex business problems and built data science accelerators that were used by multiple clients from Fortune 500 companies. I have worked on problems like Revenue Optimization, Price Optimization, Customer Propensity Models, Churn Prediction, Customer Next Stay Prediction and have created chatbots and QnA Search Engines using SOTA NLP models.</p>
+                    <p class="lead mb-5">I have more than 3 years of work experience in the CPG and Hospitality domain where I have solved complex business problems and built data science accelerators that were used by multiple clients from Fortune 500 companies. I have worked on problems like Revenue Optimization, Price Optimization, Customer Propensity Models, Churn Prediction, Customer Next Stay Prediction and have created chatbots and QnA Search Engines using SOTA NLP models.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ashirwadsangwan/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/ashirwadsangwan/"><i class="fab fa-github"></i></a>
@@ -101,10 +101,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Scientist</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <div class="subheading mb-3">MyKarma</div>
                             <ul>
                                 <li><strong>Winning Algorithm and Customer Retention:</Strong> Worked on designing a framework that helped us gain double customers in two months’ duration. Designed and implemented a retention cohort that takes up multiple factors into account to define the product growth metrics.</li>
-                                <li><strong>Customer Segmentation:</strong>Used Clustering methods to segment the customers into multiple segments to help the marketing team target the right set of customers.</li>
+                                <li><strong>Customer Segmentation:</strong> Used Clustering methods to segment the customers into multiple segments to help the marketing team target the right set of customers.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2019 - Jun 2019</span></div>
@@ -126,20 +126,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Delhi</h3>
+                            <div class="subheading mb-3">Bachelor of Science (Hons.)</div>
+                            <div>Mathematics</div>
+                            <!-- <p>GPA: 3.23</p> -->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2013 - May 2016</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Udacity</h3>
+                            <div class="subheading mb-3">Natural Language Processing Nanodegree</div>
+                            <!-- <p>GPA: 3.56</p> -->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Aug 2021</span></div>
                     </div>
                 </div>
             </section>
